# claude_tools

./: .gitignore  CLAUDE.md  LICENSE  NEW_VIZ_SPEC.md  NEW_VIZ_SPEC_interview_prompt.md  PLUGIN_SETUP.md  README.md  data_toolkit_flow.dot
brainstorm/agents/: creative-challenger.md  devils-advocate.md  pragmatic-explorer.md
brainstorm/skills/: SKILL.md
brainstorming/agents/: creative-challenger.md  devils-advocate.md  pragmatic-explorer.md
brainstorming/skills/: SKILL.md
data/: CLAUDE.md  README.md
data/skills/: SKILL.md
data/skills/scripts/: probe.py  pyproject.toml  vdopen.py
ddag/: CLAUDE.md  README.md
ddag/agents/: node-auditor.md
ddag/skills/: SKILL.md
ddag/skills/scripts/: ddag_build.py  ddag_core.py  ddag_edit.py  ddag_edit_post.py  ddag_edit_wrapper.sh  ddag_marimo.py  pyproject.toml
ddag/tests/: test_ddag.py
duckdb_sql/: README.md
duckdb_sql/skills/: SKILL.md
gsheet/: CLAUDE.md  README.md
gsheet/skills/: SKILL.md
history/: CLAUDE.md  README.md
history/skills/: SKILL.md
implement/: README.md
implement/agents/: task-worker.md
implement/skills/: SKILL.md
implementation-plans/: hybrid-search.md
memhound/: memory_skill_prompt.md  skill-spec.md
presentation/: CLAUDE.md  README.md
presentation/skills/: SKILL.md
presentations/: CLAUDE.md
presentations/skills/: SKILL.md
scribe/: README.md  use_cases.md
scribe/skills/: .gitignore  SKILL.md
scribe/tests/: README.md  RUN_TESTS.md  cleanup.py
spec/: CLAUDE.md  README.md
spec/skills/: SKILL.md
viz/: CLAUDE.md  README.md
viz/skills/scripts/: .gitignore  marimo_handler.py  pyproject.toml  test_viz_runner.py  viz_runner.py
(+69 files in other folders)
