[project]
name = "data-skill"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0.0",
    "pandas>=2.0.0,<3.0",
    "duckdb>=1.0.0",
    "easier>=1.9.11",
    "scipy>=1.12.0",
    "pyarrow>=15.0.0",
    "marimo>=0.1.0",
    "holoviews>=1.18.0",
    "hvplot>=0.9.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.0",
]
