[project]
name = "ddag-skill"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0.0",
    "pandas>=2.0.0,<3.0",
    "pyarrow>=15.0.0",
    "duckdb>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "marimo>=0.1.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "scipy>=1.12.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.4.0",
    "geopandas>=1.1.3",
    "requests>=2.31.0",
]
