[project]
name = "viz-skill"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0,<3.0",
    "polars>=0.20.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pytest>=8.0.0",
    "easier>=1.9.0",
    "marimo>=0.17.0",
    "sqlmodel>=0.0.20",
    "psycopg2-binary>=2.9.0",
]
